--- a/contact-us.css
+++ b/contact-us.css
@@ -3,13 +3,18 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    background: url(bg.jpg), #000;
+    height: 100vh;
+    background: url(./images/bg.jpg), #000;
     background-size: cover;
     color: #fff;
     font-family: "Quicksand", sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 /* Nav */
@@ -54,14 +59,12 @@ nav ul li a i {
 
 /* Contact Us */
 .container {
-    margin: 30px auto;
+    margin: 50px auto;
     position: relative;
     width: 1000px;
-    height: 550px;
-    /* background: #fff; */
+    height: 650px;
     box-shadow: 0 50px 50px rgba(0, 0, 0, 0.25);
     display: flex;
-    /* border-radius: 10px; */
 }
 
 .contact-info {
